Fixes bug making images too large

--- a/app/_scss/pages/_blog.scss
+++ b/app/_scss/pages/_blog.scss
@@ -124,6 +124,7 @@
 			width: 99%;
 
 			img {
+				width: 100%;
 				border: 2px solid #eeeeee;
 			}
 
